# epo-parser

./: .gitignore  AGENTS.md  README.md  epo-parser.spec  main.py  pyproject.toml
.github/: release-body.md
.github/packaging/: INSTRUKCJA.txt
.github/workflows/: ci.yml  windows-build.yml
ai/: idea.md
context/archive/: README.md
context/archive/2026-06-17-pyinstaller-windows-build/: change.md  plan.md
context/changes/: README.md
context/changes/additional-xml-adapter/: change.md  plan-brief.md  plan.md
context/changes/bootstrap-verification/: verification.md
context/changes/directory-batch-run/: change.md  plan-brief.md  plan.md
context/changes/epo-fixture-corpus/: change.md  plan-brief.md  plan.md
context/changes/pdf-legal-footer/: change.md  plan-brief.md  plan.md
context/changes/pyinstaller-windows-build/: change.md  plan-brief.md  (+1 more)
context/foundation/: README.md  prd.md  roadmap.md  shape-notes.md  tech-stack.md
domain/: __init__.py  conversion.py  discovery.py  model.py  naming.py  pipeline.py  summary.py
parsers/: __init__.py  crd_potwierdzenie_otrzymania.py  pp_edoreczenia.py  registry.py
pdf/: __init__.py  renderer.py  resources.py
tests/: conftest.py  helpers.py  test_discovery.py  test_fixture_corpus.py  test_integration_batch.py  test_integration_single_xml.py  test_main_helpers.py  test_naming.py  test_pdf_renderer.py  test_pdf_resources.py  test_pipeline_batch.py  test_pp_epo_parser.py  test_summary.py
tests/fixtures/: README.md  Wiadomość EZD (fixture nieodebrana).xml  crd-osoba-fizyczna.xml  crd-osoba-prawna.xml  crd-zalaczniki-generic.xml  epo-awizo-w-placowce.xml  epo-jednostka-nadlesnictwo.xml  epo-minimal-puste-pola.xml  epo-nieodebrana-analog.xml  epo-odebrana-osobiscie.xml  manifest.yaml
(+18 files in other folders)
