[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epo-parser"
version = "0.2.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fpdf2>=2.8.7",
    "lxml>=6.1.1",
]

[project.scripts]
epo-parser = "main:main"

[project.optional-dependencies]
dev = [
    "pip-audit>=2.10.1",
    "pyinstaller>=6.0.0",
    "pypdf>=5.0.0",
    "pytest>=9.1.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.1",
    "pyinstaller>=6.0.0",
    "pypdf>=5.0.0",
    "pytest>=9.1.0",
    "pyyaml>=6.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["domain", "parsers", "pdf"]

[tool.hatch.build.targets.wheel.force-include]
"pdf/assets/DejaVuSans.ttf" = "pdf/assets/DejaVuSans.ttf"
"main.py" = "main.py"

[tool.pytest.ini_options]
markers = [
    "slow: dev-only performance smoke tests (run with pytest -m slow)",
]
